<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".videomonitoring.VideoEZplayer">

    <SurfaceView
        android:id="@+id/surfaceview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:ignore="MissingConstraints" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surfaceview">


        <com.dou361.jjdxm_ijkplayer.videomonitoring.MyRadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/front_Click"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/ratio_check"
                android:button="@null"
                android:gravity="center"
                android:text="前视角">

            </RadioButton>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="35dp"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/left_Click"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ratio_check"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/zuo">

                </RadioButton>

                <RadioButton
                    android:id="@+id/god_perspective_Click"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_margin="50dp"
                    android:background="@drawable/center_shape"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/shangdi"></RadioButton>

                <RadioButton
                    android:id="@+id/right_Click"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ratio_check"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/you"></RadioButton>

            </LinearLayout>


            <RadioButton
                android:id="@+id/back_Click"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:background="@drawable/ratio_check"
                android:button="@null"
                android:gravity="center"
                android:text="@string/hou">

            </RadioButton>

        </com.dou361.jjdxm_ijkplayer.videomonitoring.MyRadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
